# BrightSync

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  HAL_IMPLEMENTATION_SUMMARY.md  HAL_MOCK_MODE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_HAL.md  README.md  TESTING.md  app.manifest  binding.gyp  build-dist-admin.ps1  build.ps1  check-wmi-params.ps1  electron-builder.json  global.d.ts  jest.config.js  package-lock.json  package.json  run-admin.ps1  test-monitor-detection.js  tsconfig.json  tsconfig.main.json
assets/: README.md
native/: brightness.cc  brightness.h  mock_monitor.cpp  mock_monitor.h  monitor_factory.cpp  monitor_factory.h  monitor_interface.h  real_monitor.cpp  real_monitor.h  win_ddc.cpp  win_internal.cpp
native/tests/: CMakeLists.txt  mock_monitor_test.cpp
scripts/: test-all.js
src/main/: brightness.controller.ts  hotkey.service.ts  ipc.ts  main.ts  monitor.manager.ts  tray.service.ts
src/preload/: preload.ts
src/renderer/: app.tsx  index.html  styles.css
src/renderer/components/: BrightnessSlider.tsx  MonitorCard.tsx  SyncToggle.tsx
src/shared/: constants.ts  types.ts
src/tests/: edge_cases.test.ts  integration.test.ts  ipc.test.ts  log_validation.test.ts  setup.ts  stress.test.ts  sync_algorithm.test.ts
